--- a/src/sass/global/_typography.scss
+++ b/src/sass/global/_typography.scss
@@ -39,7 +39,7 @@ p {
   h1 {
     font-size: var(--fs-144);
     font-family: var(--ff-heading);
-    letter-spacing: -4px;
+    // letter-spacing: -4px;
     text-transform: uppercase;
     font-weight: 900;
   }
