--- a/src/sass/variables/_font.scss
+++ b/src/sass/variables/_font.scss
@@ -1,15 +1,12 @@
 @import url("https://api.fontshare.com/v2/css?f[]=switzer@600,700,400,300,500&display=swap"),
-  url("https://fonts.googleapis.com/css2?family=Khand:wght@300;400;500;600;700&display=swap");
+  url("https://fonts.googleapis.com/css2?family=Anton:wght@400&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Lexend:wght@700&display=swap");
 
 :root {
   //font-size
   --fs-144: 9rem;
   --fs-72: 4.5rem;
-  // --fs-48: 3rem;
   --fs-36: 2.25rem;
-  // --fs-32: 2rem;
-  // --fs-24: 1.5rem;
-  // --fs-22: 1.375rem;
   --fs-18: 1.125rem;
   --fs-12: 0.75rem;
 
@@ -23,6 +20,6 @@
   --cs--2-4: 2.4px;
 
   //font family
-  --ff-heading: "Khand", sans-serif;
+  --ff-heading: "Anton", sans-serif;
   --ff-para: "Switzer", serif;
 }
