--- a/src/sass/global/_typography.scss
+++ b/src/sass/global/_typography.scss
@@ -11,11 +11,11 @@ h1 {
 
 h2 {
   font-size: var(--fs-36);
-  font-family: var(--ff-heading);
+  font-family: var(--ff-para);
   line-height: 0.8;
   letter-spacing: -1px;
   text-transform: uppercase;
-  font-weight: 900;
+  font-weight: 500;
 }
 
 h3,
@@ -24,7 +24,7 @@ h4 {
   font-family: var(--ff-para);
   line-height: 1.2;
   // letter-spacing: var(--cs--1-1);
-  font-weight: 300;
+  font-weight: 400;
 }
 
 p {
@@ -46,11 +46,11 @@ p {
 
   h2 {
     font-size: var(--fs-72);
-    font-family: var(--ff-heading);
+    font-family: var(--ff-para);
     line-height: 0.8;
     letter-spacing: -3px;
     text-transform: uppercase;
-    font-weight: 900;
+    font-weight: 500;
   }
 
   h3 {
@@ -64,8 +64,8 @@ p {
     font-size: var(--fs-18);
     font-family: var(--ff-para);
     line-height: 1.2;
-    letter-spacing: var(--cs--1-1);
-    font-weight: 400;
+    // letter-spacing: var(--cs--1-1);
+    font-weight: 500;
   }
 
   p {
