--- a/src/sass/components/hero.scss
+++ b/src/sass/components/hero.scss
@@ -1,5 +1,6 @@
 .hero-section {
   width: 100%;
+  padding-top: var(--spacing-128);
 }
 
 .hero-splash-container {
@@ -17,17 +18,72 @@
 }
 
 .hero-blurb-video-container {
-  margin-top: var(--spacing-128);
+  position: relative;
+  margin-top: var(--spacing-64);
   display: flex;
   gap: var(--spacing-256);
+  justify-content: space-between;
   padding-bottom: var(--spacing-128);
   iframe {
     border-radius: var(--spacing-16);
   }
+  height: 100vh;
+}
+
+.hero-video-container {
+  position: absolute;
+  right: 0;
+}
+
+.hero-video {
+  aspect-ratio: 16 / 9;
+  width: 100%;
 }
 
 .hero-blurb-container {
   display: flex;
   flex-direction: column;
   gap: var(--spacing-64);
+}
+
+.blurb-line-container {
+  overflow: hidden;
+  padding: 4px;
+}
+
+.blurb-cover {
+  content: "";
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  left: 0;
+  top: 0;
+  background-color: $white;
+  // @media (prefers-color-scheme: dark) {
+  //   background-color: $black;
+  // }
+}
+.hero-cta-line {
+  content: "";
+  position: absolute;
+  transition: all 0.5s;
+  right: 0;
+  border-bottom: 2px solid;
+  background-color: $black;
+  width: 100%;
+}
+
+.hero-blurb-cta-container {
+  position: relative;
+  display: inline-block;
+  padding: var(--spacing-16) 0;
+  overflow-x: hidden;
+  width: -moz-fit-content;
+  width: fit-content;
+  cursor: pointer;
+  &:hover {
+    .hero-cta-line {
+      transform: translateX(100%);
+    }
+  }
 }
