polished animations for hero

--- a/src/sass/components/hero.scss
+++ b/src/sass/components/hero.scss
@@ -26,13 +26,11 @@
   padding-bottom: var(--spacing-128);
   iframe {
     border-radius: var(--spacing-16);
+    position: absolute;
+    top: 0;
+    right: 0;
   }
   height: 100vh;
-}
-
-.hero-video-container {
-  position: absolute;
-  right: 0;
 }
 
 .hero-video {
