--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -7,3 +7,4 @@
 @import "components/nav.scss";
 @import "components/hero.scss";
 @import "components/about.scss";
+@import "components/projects.scss";
