services component created and layout css complete

--- a/src/sass/global/_typography.scss
+++ b/src/sass/global/_typography.scss
@@ -38,6 +38,7 @@ p {
   h1 {
     font-size: var(--fs-144);
     font-family: var(--ff-heading);
+    letter-spacing: 2px;
     text-transform: uppercase;
     font-weight: 900;
   }
