--- a/src/sass/components/projects.scss
+++ b/src/sass/components/projects.scss
@@ -15,7 +15,6 @@
   gap: var(--spacing-32);
   width: 100%;
   margin-bottom: var(--spacing-256);
-
   img {
     width: 100%;
     border-radius: var(--spacing-16);
@@ -59,6 +58,7 @@
   position: absolute;
   transition: all 0.5s;
   right: 0;
+  bottom: 0;
   border-bottom: 2px solid;
   background-color: $black;
   width: 100%;
