--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -8,3 +8,4 @@
 @import "components/hero.scss";
 @import "components/about.scss";
 @import "components/projects.scss";
+@import "components/services.scss";
