created contact compnent ad basic css

--- a/src/sass/components/services.scss
+++ b/src/sass/components/services.scss
@@ -1,3 +1,7 @@
+.services-section-container {
+  margin-bottom: var(--spacing-128);
+}
+
 .services-header-container {
   display: flex;
   justify-content: space-between;
