--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -9,3 +9,4 @@
 @import "components/about.scss";
 @import "components/projects.scss";
 @import "components/services.scss";
+@import "components/contact.scss";
