--- a/src/sass/components/about.scss
+++ b/src/sass/components/about.scss
@@ -20,6 +20,22 @@
   margin-bottom: var(--spacing-128);
 }
 
+.about-heading-line {
+  position: relative;
+  overflow: hidden;
+  padding: 4px;
+}
+
+.about-heading-cover {
+  content: "";
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  left: 0;
+  top: 0;
+  background-color: $white;
+}
+
 .about-blurb-container {
   display: flex;
   gap: var(--spacing-256);
