--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -10,3 +10,4 @@
 @import "components/projects.scss";
 @import "components/services.scss";
 @import "components/contact.scss";
+@import "components/footer.scss";
