--- a/src/sass/global/_typography.scss
+++ b/src/sass/global/_typography.scss
@@ -40,6 +40,7 @@ p {
     font-family: var(--ff-heading);
     letter-spacing: 2px;
     text-transform: uppercase;
+    line-height: 0.9;
     font-weight: 900;
   }
 
