--- a/src/sass/components/hero.scss
+++ b/src/sass/components/hero.scss
@@ -14,6 +14,9 @@
     margin-left: -10px;
     font-family: var(--ff-heading);
     font-size: calc(var(--spacing-256) * 1.75);
+    @media (max-width: $layout-breakpoint-tablet) {
+      font-size: var(--spacing-256);
+    }
   }
 }
 
@@ -24,12 +27,24 @@
   gap: var(--spacing-256);
   justify-content: space-between;
   margin: var(--spacing-64) 0 var(--spacing-256) 0;
+  @media (hover: none) {
+    flex-direction: column;
+    gap: var(--spacing-64);
+    justify-content: flex-start;
+    height: auto;
+  }
   iframe {
     border-radius: var(--spacing-16);
     position: absolute;
     top: 0;
     right: 0;
+    @media (hover: none) {
+      position: relative;
+    }
   }
+}
+
+.hero-video-container {
 }
 
 .hero-video {
