--- a/src/sass/components/nav.scss
+++ b/src/sass/components/nav.scss
@@ -14,6 +14,9 @@
   display: flex;
   align-items: center;
   height: var(--spacing-128);
+  @media (max-width: $layout-breakpoint-tablet) {
+    justify-content: space-between;
+  }
 }
 
 .logo-container {
@@ -31,6 +34,9 @@
   align-items: center;
   justify-content: space-between;
   margin-right: var(--spacing-128);
+  @media (max-width: $layout-breakpoint-tablet) {
+    display: none;
+  }
 }
 
 .nav-links {
@@ -42,6 +48,9 @@
   display: flex;
   width: var(--spacing-128);
   justify-content: flex-end;
+  @media (max-width: $layout-breakpoint-tablet) {
+    display: none;
+  }
 }
 
 .switch {
@@ -107,4 +116,21 @@ input:checked + .slider:before {
   -webkit-transform: translateX(-24px);
   -ms-transform: translateX(-24px);
   transform: translateX(-24px);
+}
+
+.menu-btn-container {
+  button {
+    background: none;
+    border: none;
+    color: $white;
+  }
+  display: none;
+  @media (max-width: $layout-breakpoint-tablet) {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: var(--spacing-128);
+    height: var(--spacing-128);
+    cursor: pointer;
+  }
 }
