--- a/src/sass/components/projects.scss
+++ b/src/sass/components/projects.scss
@@ -12,6 +12,7 @@
 .projects-title-container {
   display: flex;
   overflow: hidden;
+  padding-right: var(--spacing-16);
 }
 
 .projects-img-section {
@@ -24,6 +25,10 @@
     width: 100%;
     border-radius: var(--spacing-16);
     margin-bottom: var(--spacing-16);
+  }
+  @media (max-width: 650px) {
+    flex-direction: column;
+    gap: var(--spacing-128);
   }
 }
 
@@ -51,6 +56,12 @@
     -webkit-transition: 0.6s cubic-bezier(0.78, 0.01, 0.21, 1);
     transition: 0.6s cubic-bezier(0.78, 0.01, 0.21, 1);
   }
+  @media (max-width: 650px) {
+    margin-left: 0;
+    img {
+      width: calc(var(--spacing-32) * 1.5);
+    }
+  }
 }
 
 .projects-cta-content {
@@ -68,4 +79,11 @@
   border-bottom: 2px solid;
   background-color: $black;
   width: 100%;
+}
+
+@media (max-width: 650px) {
+  .projects-blurb-container,
+  .projects-subtitle-container {
+    display: none;
+  }
 }
