--- a/src/sass/components/services.scss
+++ b/src/sass/components/services.scss
@@ -9,37 +9,37 @@
   margin-bottom: var(--spacing-128);
 }
 
+.services-blurb {
+  width: 50%;
+}
+
 .services-main-container {
   display: flex;
   flex-direction: column;
   gap: var(--spacing-64);
   align-items: flex-start;
-  margin-left: var(--spacing-256);
+  margin-left: var(--spacing-128);
   padding-bottom: var(--spacing-128);
-}
-
-.service-container {
-  cursor: pointer;
-  &:hover {
-    .service-blurb-container {
-      opacity: 1;
-      transform: translateX(0);
-    }
-    .service-img-container {
-      img {
-        transform: translateY(0);
-      }
-    }
+  @media (max-width: 650px) {
+    margin-left: 0;
+    gap: var(--spacing-128);
   }
-  -webkit-transition: 0.6s cubic-bezier(0.78, 0.01, 0.21, 1);
-  transition: 0.6s cubic-bezier(0.78, 0.01, 0.21, 1);
 }
 
 .service-blurb-container {
+  width: 50%;
   opacity: 0;
   transform: translateX(100%);
   -webkit-transition: 0.6s cubic-bezier(0.78, 0.01, 0.21, 1);
   transition: 0.6s cubic-bezier(0.78, 0.01, 0.21, 1);
+  @media (max-width: $layout-breakpoint-desktop-lrg) {
+    width: 40%;
+  }
+  @media (max-width: 650px) {
+    opacity: 1;
+    transform: translateX(0);
+    width: 100%;
+  }
 }
 
 .service-img-container {
@@ -84,7 +84,63 @@
   display: flex;
   gap: var(--spacing-32);
   align-items: center;
+  cursor: pointer;
   img {
     width: var(--spacing-256);
+  }
+  &:hover {
+    .service-blurb-container {
+      opacity: 1;
+      transform: translateX(0);
+    }
+    .service-img-container {
+      img {
+        transform: translateY(0);
+      }
+    }
+  }
+  -webkit-transition: 0.6s cubic-bezier(0.78, 0.01, 0.21, 1);
+  transition: 0.6s cubic-bezier(0.78, 0.01, 0.21, 1);
+  h2 {
+    display: none;
+  }
+  @media (max-width: 650px) {
+    flex-direction: column;
+    width: 100%;
+    align-items: flex-start;
+    padding-bottom: var(--spacing-128);
+    border-bottom: 1px solid lightgray;
+    h1 {
+      display: none;
+    }
+    h2 {
+      font-size: var(--fs-72);
+      font-weight: 700;
+      display: block;
+      padding-bottom: var(--spacing-32);
+    }
+    img {
+      width: 100%;
+      transform: translateY(0);
+      align-items: left;
+    }
+  }
+}
+
+@media (max-width: 650px) {
+  .services-blurb,
+  .services-cta {
+    display: none;
+  }
+}
+
+.service-three {
+  border-bottom: none;
+}
+
+.mobile-cta {
+  display: none;
+  @media (max-width: 650px) {
+    display: block;
   }
 }
