--- a/src/sass/components/footer.scss
+++ b/src/sass/components/footer.scss
@@ -39,6 +39,10 @@
   @media (max-width: $layout-breakpoint-mobile) {
     flex-direction: column;
     gap: var(--spacing-16);
+    align-items: center;
+  }
+  h4 {
+    font-size: 14px;
   }
 }
 
@@ -50,5 +54,24 @@
   @media (max-width: $layout-breakpoint-tablet) {
     font-size: var(--spacing-128);
     letter-spacing: -6px;
+  }
+}
+
+.footer-scroll-btn,
+.footer-scroll-btn-mob {
+  cursor: pointer;
+  background: none;
+  border: none;
+}
+
+.footer-scroll-btn {
+  @media (max-width: $layout-breakpoint-mobile) {
+    display: none;
+  }
+}
+
+.footer-scroll-btn-mob {
+  @media (min-width: $layout-breakpoint-mobile) {
+    display: none;
   }
 }
