added functional dark mode to switch

--- a/src/sass/components/contact.scss
+++ b/src/sass/components/contact.scss
@@ -39,6 +39,6 @@
   right: 0;
   bottom: 0;
   border-bottom: 4px solid;
-  background-color: $black;
+  background-color: var(--text-primary);
   width: 100%;
 }
