--- a/src/sass/components/about.scss
+++ b/src/sass/components/about.scss
@@ -36,7 +36,7 @@
   position: absolute;
   left: 0;
   top: 0;
-  background-color: $white;
+  background-color: var(--background);
 }
 
 .about-blurb-container {
@@ -87,6 +87,6 @@
   transition: all 0.5s;
   right: 0;
   border-bottom: 2px solid;
-  background-color: $black;
+  background-color: var(--text-primary);
   width: 100%;
 }
