--- a/src/sass/components/projects.scss
+++ b/src/sass/components/projects.scss
@@ -77,7 +77,8 @@
   right: 0;
   bottom: 0;
   border-bottom: 2px solid;
-  background-color: $black;
+  background-color: var(--text-primary);
+  width: 100%;
   width: 100%;
 }
 
