--- a/src/sass/components/services.scss
+++ b/src/sass/components/services.scss
@@ -76,7 +76,7 @@
   transition: all 0.5s;
   right: 0;
   border-bottom: 2px solid;
-  background-color: $black;
+  background-color: var(--text-primary);
   width: 100%;
 }
 
