--- a/src/sass/global/_reset.scss
+++ b/src/sass/global/_reset.scss
@@ -76,8 +76,8 @@ main {
 
 body {
   line-height: 1;
-  background-color: $white;
-  color: $black;
+  background-color: var(--background);
+  color: var(--text-primary);
 }
 
 // @media (prefers-color-scheme: dark) {
@@ -121,6 +121,8 @@ html {
 .App {
   width: 100vw;
   position: relative;
+  background-color: var(--background);
+  color: var(--text-primary);
 }
 
 .container {
