--- a/src/sass/global/_reset.scss
+++ b/src/sass/global/_reset.scss
@@ -123,6 +123,8 @@ html {
   position: relative;
   background-color: var(--background);
   color: var(--text-primary);
+  -webkit-transition: 0.6s cubic-bezier(0.78, 0.01, 0.21, 1);
+  transition: 0.6s cubic-bezier(0.78, 0.01, 0.21, 1);
 }
 
 .container {
