--- a/src/sass/components/services.scss
+++ b/src/sass/components/services.scss
@@ -88,7 +88,15 @@
   img {
     width: var(--spacing-256);
   }
+  h1 {
+    opacity: 0.25;
+  }
   &:hover {
+    h1 {
+      opacity: 1;
+      -webkit-transition: 1s cubic-bezier(0.19, 0.01, 0.21, 1);
+      transition: 1s cubic-bezier(0.19, 0.01, 0.21, 1);
+    }
     .service-blurb-container {
       opacity: 1;
       transform: translateX(0);
@@ -101,7 +109,7 @@
   }
   -webkit-transition: 0.6s cubic-bezier(0.78, 0.01, 0.21, 1);
   transition: 0.6s cubic-bezier(0.78, 0.01, 0.21, 1);
-  h2 {
+  .service-title-mob {
     display: none;
   }
   @media (max-width: 650px) {
@@ -113,9 +121,9 @@
     h1 {
       display: none;
     }
-    h2 {
-      font-size: var(--fs-72);
-      font-weight: 700;
+    .service-title-mob {
+      opacity: 1;
+      letter-spacing: 1px;
       display: block;
       padding-bottom: var(--spacing-32);
     }
@@ -125,6 +133,27 @@
       align-items: left;
     }
   }
+}
+
+.service-one[data-serviceOne="true"],
+.service-two[data-serviceTwo="true"],
+.service-three[data-serviceThree="true"] {
+  h1 {
+    opacity: 1;
+    -webkit-transition: 0.6s cubic-bezier(0.19, 0.01, 0.21, 1);
+    transition: 0.6s cubic-bezier(0.19, 0.01, 0.21, 1);
+  }
+  .service-blurb-container {
+    opacity: 1;
+    transform: translateX(0);
+  }
+  .service-img-container {
+    img {
+      transform: translateY(0);
+    }
+  }
+  -webkit-transition: 0.6s cubic-bezier(0.19, 0.01, 0.21, 1);
+  transition: 0.6s cubic-bezier(0.19, 0.01, 0.21, 1);
 }
 
 @media (max-width: 650px) {
