--- a/src/sass/global/_reset.scss
+++ b/src/sass/global/_reset.scss
@@ -138,11 +138,11 @@ button {
   cursor: pointer;
 }
 
-.scroll-container {
-  position: fixed;
-  top: 0;
-  left: 0;
-  width: 100%;
-  overflow: hidden;
-  will-change: transform;
-}
+// .scroll-container {
+//   position: fixed;
+//   top: 0;
+//   left: 0;
+//   width: 100%;
+//   overflow: hidden;
+//   will-change: transform;
+// }
