--- a/src/sass/components/footer.scss
+++ b/src/sass/components/footer.scss
@@ -40,6 +40,7 @@
     flex-direction: column;
     gap: var(--spacing-16);
     align-items: center;
+    margin-bottom: var(--spacing-32);
   }
   h4 {
     font-size: 14px;
