--- a/src/sass/components/nav.scss
+++ b/src/sass/components/nav.scss
@@ -1,6 +1,6 @@
 .header {
-  position: -webkit-sticky;
-  position: sticky;
+  width: 100%;
+  position: fixed;
   top: 0;
   z-index: 11;
   color: white;
@@ -151,6 +151,7 @@
   flex-direction: column;
   justify-content: space-between;
   height: 100%;
+  transition: all 1s cubic-bezier(0.19, 1, 0.22, 1);
 }
 
 .sitemap-links-container {
@@ -165,6 +166,10 @@
   li {
     position: relative;
     justify-self: flex-start;
+    a {
+      text-decoration: none;
+      color: white;
+    }
   }
 }
 
