--- a/src/sass/global/_reset.scss
+++ b/src/sass/global/_reset.scss
@@ -76,16 +76,9 @@ main {
 
 body {
   line-height: 1;
-  background-color: var(--background);
-  color: var(--text-primary);
+  // background-color: var(--background);
+  // color: var(--text-primary);
 }
-
-// @media (prefers-color-scheme: dark) {
-//   body {
-//     background-color: $black;
-//     color: $white;
-//   }
-// }
 
 ol,
 ul {
@@ -125,6 +118,7 @@ html {
   color: var(--text-primary);
   -webkit-transition: 0.6s cubic-bezier(0.78, 0.01, 0.21, 1);
   transition: 0.6s cubic-bezier(0.78, 0.01, 0.21, 1);
+  overflow-x: hidden;
 }
 
 .container {
