--- a/src/sass/global/_typography.scss
+++ b/src/sass/global/_typography.scss
@@ -64,7 +64,7 @@ p {
     font-size: var(--fs-18);
     font-family: var(--ff-para);
     line-height: 1.2;
-    // letter-spacing: var(--cs--1-1);
+    letter-spacing: var(--cs--1-1);
     font-weight: 500;
   }
 
