--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -11,3 +11,4 @@
 @import "components/services.scss";
 @import "components/contact.scss";
 @import "components/footer.scss";
+@import "components/pricing/banner.scss";
