--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -9,6 +9,9 @@
 @import "components/about.scss";
 @import "components/projects.scss";
 @import "components/services.scss";
+@import "components/testimonials.scss";
 @import "components/contact.scss";
 @import "components/footer.scss";
 @import "components/pricing/banner.scss";
+@import "components/pricing/approach.scss";
+@import "components/pricing/price-list.scss";
