--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -15,3 +15,5 @@
 @import "components/pricing/banner.scss";
 @import "components/pricing/approach.scss";
 @import "components/pricing/price-list.scss";
+
+@import "components/transition.scss";
