--- a/src/sass/components/nav.scss
+++ b/src/sass/components/nav.scss
@@ -9,7 +9,7 @@
   mix-blend-mode: difference;
 }
 
-.header[data-menuOpen="true"] {
+.header[data-menuopen="true"] {
   mix-blend-mode: normal;
 }
 
@@ -83,7 +83,7 @@
   }
 }
 
-.switch[data-isOn="true"] {
+.switch[data-ison="true"] {
   justify-content: flex-end;
   width: calc(var(--spacing-32) + 4px);
   -webkit-transition: 0.6s cubic-bezier(0.78, 0.01, 0.21, 1);
@@ -125,7 +125,7 @@
 .menu-btn-text {
   transition: transform 1.5s cubic-bezier(0.19, 1, 0.22, 1);
   h4 {
-    color: white;
+    color: var(--nav-menu-color);
   }
 }
 
@@ -168,7 +168,6 @@
     justify-self: flex-start;
     a {
       text-decoration: none;
-      color: white;
     }
   }
 }
