--- a/src/sass/global/_typography.scss
+++ b/src/sass/global/_typography.scss
@@ -72,6 +72,6 @@ p {
     font-size: var(--fs-12);
     font-family: var(--ff-para);
     line-height: 1.5;
-    letter-spacing: var(--cs--1-2);
+    // letter-spacing: var(--cs--1-2);
   }
 }
