--- a/src/sass/components/projects.scss
+++ b/src/sass/components/projects.scss
@@ -51,13 +51,12 @@
 
 .projects-cta-section {
   position: relative;
-  display: inline-block;
   padding: var(--spacing-16) 0;
   overflow-x: hidden;
   width: -moz-fit-content;
   width: fit-content;
   cursor: pointer;
-  margin-left: calc(50vw - var(--spacing-64));
+  margin-left: auto;
   -webkit-transition: 0.6s cubic-bezier(0.78, 0.01, 0.21, 1);
   transition: 0.6s cubic-bezier(0.78, 0.01, 0.21, 1);
   &:hover {
